Archive2/19/2c300ec465529e/output
main.cpp: In function 'int main()':
main.cpp:17:13: error: 'y' was not declared in this scope
     } while(y++ < 10); // even if this did compile, it'd be an infinite loop
             ^
